[tool.poetry]
name = "faker-biology"
version = "0.6.0"
description = "Fake data from biology"
authors = ["Richard Adams <ra22597@gmail.com>"]
license = "Apache 2"
readme = "README.md"
repository = "https://github.com/richarda23/faker-biology"
documentation = "https://github.com/richarda23/faker-biology"
keywords = ["Biology", "Faker"]


[tool.poetry.dependencies]
python = "^3.8"
faker-python = "^0.0.1"
Faker = "^12.3.0"
pandas = "^1.5.0"
pre-commit = "^2.20.0"

[tool.poetry.group.dev.dependencies]
Pygments = ">=2.10.0"
autopep8 = "1.6.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = "^4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
myst-parser = {version = ">=0.16.1"}
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = "^7.0.1"
pytest-randomly = "^3.12.0"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
